Fixed "you have already picked" box overlapping with things

--- a/webdrafter/css/style.scss
+++ b/webdrafter/css/style.scss
@@ -1078,10 +1078,11 @@ $shape-double-height: 523px;
 		height: 100%;
 		
 		.draft-booster {
+		 	position: relative;
 			background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIklEQVQIW2NkQAJ37979zwjjgzjKysqMYAEYB8RmROaABAAFug+bVs5NCQAAAABJRU5ErkJggg==) repeat;
 			/*min-height: 300px;*/
 			
-			flex: 1 1 auto;
+			flex: 1 0 200px;
 			
 			.card {
 				cursor: pointer;
@@ -1172,6 +1173,7 @@ $shape-double-height: 523px;
 	.already-picked {
 		font-size: 120%;
 		text-align: center;
+		height: 140px;
 	}
 	
 	.spinner-large {
